# Graphtune

./: .gitignore  README.md  README_ch.md  pyproject.toml
Readme./: Readme.md  Readme.txt
core/: algorithms.py  extractor.py  scheduler.py
experiments/: generate_dataset.py  generate_graphs.py  predict.py  results.csv  runner.py  train_model.py
experiments/data/: train_dataset.csv
experiments/model/: label_encoder.pkl  model.pkl
experiments/new_graphs/: test_bfs.json  test_dijkstra.json  test_greedy.json
experiments/sample_graphs/: g0.json  g1.json  g2.json
